# Real-Time-Surveillance-Analytics-Platform-RSAP

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md
apps/desktop-backend/: .dockerignore  Dockerfile  README.md  main.py  pytest.ini  requirements-dev.txt  requirements-orchestration-dev.txt  requirements.txt
apps/desktop-backend/app/: __init__.py  authorization.py  clients.py  config.py  container.py  crypto.py  database.py  dependencies.py  dtos.py  repositories.py  responses.py  schemas.py  services.py
apps/desktop-backend/docs/: ORCHESTRATION_CONTRACTS.md
apps/desktop-frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop-frontend/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-frontend/src-tauri/src/: main.rs
apps/file-server/: .dockerignore  Dockerfile  README.md  main.py  pytest.ini  requirements.txt
apps/webapp-backend/: .dockerignore  Dockerfile  README.md  alembic.ini  main.py  pytest.ini  requirements.txt
apps/webapp-frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tsconfig.json
docs/: ARCHITECTURE_SUMMARY_REDIS_RECOMMENDED.md  RUNTIME_SMOKE_TEST.md
docs/agent-prompts/: CODEX_MASTER_PROMPT_REDIS_RECOMMENDED.md
docs/api-contracts/: webapp-openapi.json
infra/: docker-compose.dev.yml  docker-compose.yml
infra/caddy/: Caddyfile
infra/postgres/: init.sql
scripts/: check-env.py  dev-down.ps1  dev-health.ps1  dev-up.ps1  e2e-smoke.ps1  install-desktop.sh  run-all.py  seed-admin.ps1  test_e2e.py
scripts/tests/: test_run_all.py
(+137 files in other folders)
