[package]
name = "rsap"
version = "1.0.0"
description = "RSAP desktop frontend"
authors = ["RSAP"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
dirs = "5.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
